--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ html, body, #root {
   width: 100%;
   height: 100%;
   margin: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 * {
@@ -48,29 +52,53 @@ html, body, #root {
   display: grid;
   width: 100%;
   height: 100%;
-  grid-template: 1fr / 1fr 10% 1fr 10%;
+  grid-template: 10% 1fr 2fr 1fr 2fr 4fr / 1fr;
   grid-area: sliders;
+}
+
+.sliders > .header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  text-align: center;
+  /* background-color: #4cafa0; */
+  background-color: #58b8e4;
+  color: white;
+  padding-left: 1.4rem;
 }
 
 .slider-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0 1.5rem;
 }
 
 .slider-selection {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  justify-content: flex-start;
+}
+
+.slider-selection > .slider-selection-header {
+  padding-left: 1rem;
+}
+
+.slider-selection > .slider-selection-value {
+  padding-left: 1rem;
 }
 
 .history {
   grid-area: history;
 }
 
+.content {
+  grid-area: content;
+}
+
 .App {
   display: grid;
-  grid-template: 1fr 2fr / 25% 1fr;
-  grid-template-areas: "history sliders"
-                        "history content";
+  grid-template: 1fr 2fr / 2fr 3fr 2fr;
+  grid-template-areas: "history sliders content"
+                        "history sliders content";
 }
